<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.0.6</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <packaging>pom</packaging>

    <groupId>com.dolores</groupId>
    <artifactId>InfoHub</artifactId>
    <version>0.0.1</version>
    <name>InfoHub</name>
    <description>InfoHub</description>

    <properties>
        <java.version>17</java.version>
        <spring-cloud.version>2022.0.2</spring-cloud.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <dolores.version>0.0.1</dolores.version>
    </properties>

    <modules>
        <module>cloud</module>
        <module>infohub</module>
    </modules>


    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>com.dolores</groupId>
                <artifactId>cloud</artifactId>
                <version>${dolores.version}</version>
            </dependency>

            <dependency>
                <groupId>com.dolores</groupId>
                <artifactId>infohub</artifactId>
                <version>${dolores.version}</version>
            </dependency>

            <!-- springCloud -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
